--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -31,7 +31,7 @@
       "@stores/*": ["./src/stores/*"],
       "@features/*": ["./src/features/*"],
       "@services/*": ["./src/services/*"],
-      "@types/*": ["./src/types/*"]
+      "@models/*": ["./src/models/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
