--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,31 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Backend Python
+backend/venv/
+backend/.venv/
+backend/__pycache__/
+backend/*.pyc
+backend/*.pyo
+backend/*.pyd
+backend/.pytest_cache/
+backend/.mypy_cache/
+backend/.coverage
+backend/htmlcov/
+backend/*.egg-info/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Runtime data
+data/vectorstore/
+data/conversations/
+data/characters/*.json
+!data/characters/example.json
+
+# Temporary files
+*.tmp
+.temp/
